# asteroids

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain
doc/: rust-gpu-memory-alignment.md  wgsl-to-rust-gpu.md
res/: README.md  assets.blend  assets.mtl
res/spaceship/: spaceship.mtl
shaders/model/: Cargo.toml
shaders/model/src/: lib.rs  pipeline.rs
shaders/shared/: Cargo.toml
shaders/shared/src/: lib.rs  wgpu.rs
shaders/texture/: Cargo.toml
shaders/texture/src/: lib.rs  pipeline.rs
src/: backdrop.rs  backdrop.wgsl  camera.rs  collision.rs  components.rs  entity.rs  examples.rs  font.rs  gamestate.rs  input.rs  instance.rs  light.rs  light.wgsl  main.rs  model.rs  resource.rs  shader.wgsl  shaders.rs  state.rs  texture.rs  texture.wgsl  ui.rs  world.rs
src/gamestate/: collision.rs  components.rs  entity.rs  geometry.rs  world.rs
src/shaders/backdrop/: Cargo.toml
src/shaders/backdrop/src/: lib.rs
src/shaders/model/: Cargo.toml
src/shaders/model/src/: lib.rs
src/shaders/texture/src/: lib.rs
