[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"
resolver = "2"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.25"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.11"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
tobj = "3.0"
rayon = "1.5"
rand = "0.8.4"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"