[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"
resolver = "2"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.26.1"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = { version = "0.12", features = [ "spirv" ] }
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
tobj = "3.0"
rayon = "1.5"
rand = "0.8.4"
rusttype = "0.9.2"
model-shader = { path = "shaders/model", features = ["pipeline"] }
texture-shader = { path = "shaders/texture", features = ["pipeline"]}
shared = { path = "shaders/shared" }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3