[package]
name = "shared"
version = "0.1.0"
edition = "2021"


[features]
wgpu_bindings = [ "wgpu" ]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", features = ["glam"] }
glam = { version = "0.20.2", default-features = false, features = ["libm", "bytemuck"] }
bytemuck = { version = "1.4", features = [ "derive" ] }
wgpu = { version = "0.12", optional = true }